--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,20 +1,46 @@
 body {
-    margin: 0rem;
-    font-family: "Fira Sans", Arial, sans-serif;
-    color: #141414;
+  margin: 0rem;
+  font-family: "Fira Sans", Arial, sans-serif;
+  color: #141414;
+  margin-bottom: 1000px;
 }
 
-h1, h2, h3, p {
-    margin: 0rem;
+h1,
+h2,
+h3,
+p {
+  margin: 0rem;
 }
 
 ul {
-    margin: 0rem;
-    padding: 0rem;
-    list-style: none;
+  margin: 0rem;
+  padding: 0rem;
+  list-style: none;
 }
 
 img {
-    display: block;
-    max-width: 100%;
+  display: block;
+  max-width: 100%;
+}
+
+.subtitulo {
+  font-size: 8rem;
+  line-height: 1;
+  text-transform: uppercase;
+  word-break: break-all;
+  max-width: 4ch;
+}
+
+.container {
+  max-width: 1200px;
+  padding: 40px 20px;
+  margin: 0 auto;
+}
+
+@media (max-width: 800px) {
+  .subtitulo {
+    font-size: 3rem;
+    text-transform: capitalize;
+    max-width: initial;
+  }
 }
