--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2,7 +2,6 @@ body {
   margin: 0rem;
   font-family: "Fira Sans", Arial, sans-serif;
   color: #141414;
-  margin-bottom: 1000px;
 }
 
 h1,
@@ -41,6 +40,6 @@ img {
   .subtitulo {
     font-size: 3rem;
     text-transform: capitalize;
-    max-width: initial;
+    max-width: initial !important;
   }
 }
