--- a/forms/styles.css
+++ b/forms/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --roxo: #84e;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 1rem;
@@ -25,6 +29,7 @@ label {
 }
 
 button {
+    background-color: var(--roxo);
     width: 250px;
     height: 35px;
     margin-top: 1rem;
