--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -1,3 +1,6 @@
+@import './header.css';
+@import './introduction.css';
+
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
@@ -11,77 +14,14 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  flex-wrap: wrap;
-  gap: 20px;
+img {
+    max-width: 100%;
+    display: block;
 }
 
-.header-bg {
-  background-color: #000;
-}
-
-.header-menu {
-  display: flex;
-  gap: 40px;
-  flex-wrap: wrap;
-}
-
-.header-menu a {
-  display: inline-block;
-  color: #fff;
-  padding: 16px 0px;
-  font-size: 18px;
-  position: relative;
-}
-
-.header-menu a:after {
-  content: "";
-  display: block;
-  height: 2px;
-  width: 0px;
-  background-color: #ffff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
-
-.header-menu a:hover:after {
-  width: 100%;
-}
-
-@media (max-width: 800px) {
-  .header-menu {
-    gap: 20px;
-  }
-
-  .header-menu a {
-    background-color: #111111;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-
-  .header a:after {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 14px;
-  }
+h1, ul, p {
+  margin: 0px;
 }
