--- a/bikcraft-final/styles/introduction.css
+++ b/bikcraft-final/styles/introduction.css
@@ -1,28 +1,103 @@
 .introduction-bg {
   background-color: #000;
   color: #fff;
+  box-shadow: inset 0 -120px #fff;
 }
 
 .introduction {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
+  max-width: 1200px;
+  padding: 0px 20px;
+  margin: 0px auto;
+}
+
+.introduction h1 span {
+  color: #ffbf00;
 }
 
 .introduction-content {
-    align-self: end;
-    padding-bottom: 80px;
+  align-self: end;
+  padding-bottom: 200px;
 }
 
 .introduction h1 {
-    margin-bottom: 32px;
-    font-size: 64px;
-    line-height: 1.125;
+  margin-bottom: 32px;
+  font-size: 64px;
+  line-height: 1.125;
+}
+
+.introduction img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .introduction p {
-    margin-bottom: 20px;
-    font-size: 24px;
-    line-height: 1.5;
-    color: #b2b2b2;
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
+}
+
+.introduction a {
+  display: inline-block;
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  color: #332200;
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: bold;
+}
+
+.introduction a:hover {
+  background: linear-gradient(#ffb60d, #e59317);
+}
+
+@media (max-width: 1200px) {
+  .introduction h1 {
+    font-size: 48px;
+  }
+
+  .introduction p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 800px) {
+  .introduction-bg {
+    background: #111;
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #fff;
+  }
+
+  .introduction {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+
+  .introduction-content {
+    padding-bottom: 0px;
+  }
+
+  .introduction img {
+    height: 300px;
+    width: 100%;
+  }
+
+  .introduction h1 {
+    font-size: 32px;
+    margin-bottom: 16px;
+  }
+}
+
+@media (max-width: 600px) {
+  .introduction a {
+    padding: 12px 16px;
+    font-size: 16px;
+  }
 }
