--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -1,5 +1,7 @@
-@import './header.css';
-@import './introduction.css';
+@import "./header.css";
+@import "./introduction.css";
+
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap");
 
 body {
   margin: 0px;
@@ -19,10 +21,12 @@ a {
 }
 
 img {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 
-h1, ul, p {
+h1,
+ul,
+p {
   margin: 0px;
 }
