--- a/bikcraft-final/styles/introduction.css
+++ b/bikcraft-final/styles/introduction.css
@@ -26,6 +26,8 @@
   margin-bottom: 32px;
   font-size: 64px;
   line-height: 1.125;
+  font-family: "Poppins";
+  font-weight: 600;
 }
 
 .introduction img {
@@ -39,6 +41,8 @@
   font-size: 24px;
   line-height: 1.5;
   color: #b2b2b2;
+  font-family: "Roboto";
+  font-weight: 400;
 }
 
 .introduction a {
@@ -51,7 +55,8 @@
   color: #332200;
   font-size: 18px;
   line-height: 1.33;
-  font-weight: bold;
+  font-family: "Poppins";
+  font-weight: 600;
 }
 
 .introduction a:hover {
