--- a/bikcraft-final/styles/global/header.css
+++ b/bikcraft-final/styles/global/header.css
@@ -12,7 +12,7 @@
   }
   
   .header-bg {
-    background-color: #000;
+    background-color: var(--color-12);
   }
   
   .header-menu {
@@ -23,7 +23,6 @@
   
   .header-menu a {
     display: inline-block;
-    color: #fff;
     padding: 16px 0px;
     font-size: 18px;
     position: relative;
@@ -36,7 +35,7 @@
     display: block;
     height: 2px;
     width: 0px;
-    background-color: #ffff;
+    background-color: var(--color-0);;
     margin-top: 4px;
     transition: 0.3s;
     position: absolute;
@@ -52,7 +51,7 @@
     }
   
     .header-menu a {
-      background-color: #111111;
+      background-color: var(--color-11);
       padding: 12px 16px;
       border-radius: 4px;
     }
