--- a/bikcraft-final/styles/home/introduction.css
+++ b/bikcraft-final/styles/home/introduction.css
@@ -1,7 +1,6 @@
 .introduction-bg {
   background-color: #000;
-  color: #fff;
-  box-shadow: inset 0 -120px #fff;
+  box-shadow: inset 0 -120px var(--color-0);
 }
 
 .introduction {
@@ -13,10 +12,6 @@
   margin: 0px auto;
 }
 
-.introduction h1 span {
-  color: #ffbf00;
-}
-
 .introduction-content {
   align-self: end;
   padding-bottom: 200px;
@@ -24,10 +19,6 @@
 
 .introduction h1 {
   margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: "Poppins";
-  font-weight: 600;
 }
 
 .introduction img {
@@ -38,29 +29,6 @@
 
 .introduction p {
   margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-  font-family: "Roboto";
-  font-weight: 400;
-}
-
-.introduction a {
-  display: inline-block;
-  padding: 16px 32px;
-  background: linear-gradient(#ffbf00, #f2a50c);
-  border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
-  color: #332200;
-  font-size: 18px;
-  line-height: 1.33;
-  font-family: "Poppins";
-  font-weight: 600;
-}
-
-.introduction a:hover {
-  background: linear-gradient(#ffb60d, #e59317);
 }
 
 @media (max-width: 1200px) {
@@ -75,9 +43,9 @@
 
 @media (max-width: 800px) {
   .introduction-bg {
-    background: #111;
+    background: var(--color-11);
     padding-top: 40px;
-    box-shadow: inset 0 -60px #fff;
+    box-shadow: inset 0 -60px var(--color-0);
   }
 
   .introduction {
@@ -97,12 +65,5 @@
   .introduction h1 {
     font-size: 32px;
     margin-bottom: 16px;
-  }
-}
-
-@media (max-width: 600px) {
-  .introduction a {
-    padding: 12px 16px;
-    font-size: 16px;
   }
 }
