--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -1,32 +1,14 @@
-@import "./header.css";
-@import "./introduction.css";
+@import "./global/header.css";
+@import "./global/global.css";
 
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap");
+/* Components */
+@import "./utils/components.css";
 
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-  padding-bottom: 600px;
-}
+/* Typography */
+@import "./utils/typography.css";
 
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
+/* Colors */
+@import "./utils/colors.css";
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
-h1,
-ul,
-p {
-  margin: 0px;
-}
+/* Home */
+@import "./home/introduction.css";
