--- a/bikcraft-final/styles/utils/components.css
+++ b/bikcraft-final/styles/utils/components.css
@@ -15,6 +15,32 @@
   background: linear-gradient(#ffb60d, #e59317);
 }
 
+.link {
+  display: inline-block;
+  color: var(--color-p1);
+  font: 500 1.5rem/1.5 "Poppins", Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+}
+
+.link:hover {
+  color: var(--color-0);
+}
+
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
 @media (max-width: 600px) {
   .button {
     padding: 12px 16px;
