--- a/bikcraft-final/styles/global/header.css
+++ b/bikcraft-final/styles/global/header.css
@@ -1,14 +1,10 @@
 .header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 20px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
   }
   
   .header-bg {
