--- a/bikcraft-final/styles/home/introduction.css
+++ b/bikcraft-final/styles/home/introduction.css
@@ -7,9 +7,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  max-width: 1200px;
-  padding: 0px 20px;
-  margin: 0px auto;
 }
 
 .introduction-content {
@@ -22,6 +19,7 @@
 }
 
 .introduction img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
