--- a/bikcraft-final/styles/global/global.css
+++ b/bikcraft-final/styles/global/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap&family=Merriweather:ital,wght@1,900&display=swap");
 
 body {
   margin: 0px;
@@ -32,6 +32,7 @@ h2,
 h3,
 h4,
 ul,
-p {
+p,
+blockquote {
   margin: 0px;
 }
