--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -13,8 +13,10 @@
 /* Home */
 @import "./home/introduction.css";
 /* bicycles */
-@import "./bicycles/bicycles-list.css";
+@import "./home/bicycles-list.css";
 /* technology */
-@import "./technology/technology.css";
+@import "./home/technology.css";
 /* partners */
-@import "./partners/partners.css";
+@import "./home/partners.css";
+/* testimony */
+@import "./home/testimony.css";
