--- a/bikcraft-final/styles/utils/components.css
+++ b/bikcraft-final/styles/utils/components.css
@@ -47,8 +47,10 @@
 .container {
   box-sizing: border-box;
   max-width: 1200px;
-  padding: 0 20px;
-  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media (max-width: 600px) {
