feature: Bicycles page

--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -25,5 +25,8 @@
 /* Insurance */
 @import "./pages/insurance/insurance.css";
 
-/* terms */
+/* Terms */
 @import "./pages/terms/terms.css";
+
+/* Bicycles */
+@import "./pages/bicycles/bicycles.css";
