feature: insurance page

--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -30,3 +30,8 @@
 
 /* Bicycles */
 @import "./pages/bicycles/bicycles.css";
+
+
+/* Insurance */
+@import "./pages/insurance/benefits.css";
+@import "./pages/insurance/questions.css";
