--- a/bikcraft-final/styles/pages/home/bicycles-list.css
+++ b/bikcraft-final/styles/pages/home/bicycles-list.css
@@ -11,6 +11,10 @@
   overflow-x: auto;
 }
 
+#bicycle .bicycles-list ul {
+    padding: 0 0 20px;
+}
+
 .bicycles-list li {
   flex: 1;
   min-width: 280px;
