--- a/bikcraft-final/styles/pages/bicycles/nimbus.css
+++ b/bikcraft-final/styles/pages/bicycles/nimbus.css
@@ -33,8 +33,9 @@
   display: grid;
   grid-template-columns: max-content auto;
   align-items: center;
-  justify-content: start;
+  justify-items: start;
   gap: 8px 12px;
+  margin-bottom: 40px;
 }
 
 .bicycle-buy a {
@@ -48,7 +49,7 @@
   padding: 4px 8px;
   border-radius: 4px;
   gap: 8px;
-  margin-bottom: 40px;
+  margin-bottom: 4px;
 }
 
 .bicycle-content h2 {
@@ -68,7 +69,7 @@
   margin-bottom: 40px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 32pc;
+  gap: 32px;
 }
 
 .bicycle-informations img {
@@ -106,7 +107,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 400px) {
   .bicycle-informations {
     grid-template-columns: 1fr;
   }
