feature: contact form

--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -41,4 +41,4 @@
 @import "./pages/insurance/questions.css";
 
 /* Contact */
-@import "./pages/contacts/contact.css";
+@import "./pages/contact/contact.css";
