feature: starting budget page

--- a/bikcraft-final/styles/index.css
+++ b/bikcraft-final/styles/index.css
@@ -44,3 +44,6 @@
 @import "./pages/contact/contact.css";
 /* stores */
 @import "./pages/contact/stores.css";
+
+/* Budget */
+@import "./pages/budget/budget.css";
