--- a/bikcraft-final/styles/utils/form.css
+++ b/bikcraft-final/styles/utils/form.css
@@ -16,10 +16,11 @@
 
 .form input[type="text"],
 .form input[type="email"],
+.form input[type="number"],
 .form textarea {
   font: 400 1rem/1.5 "Roboto", sans-serif;
-  background: var(--cor-1);
-  border: 1px solid var(--cor-2);
+  background-color: var(--color-1);
+  border: 1px solid var(--color-2);
   padding: 12px;
   border-radius: 4px;
   width: 100%;
@@ -28,10 +29,11 @@
 
 .form input[type="text"]:focus,
 .form input[type="email"]:focus,
+.form input[type="number"]:focus,
 .form textarea:focus {
   outline: none;
-  border-color: var(--cor-p1);
-  background: var(--cor-0);
+  border-color: var(--color-p1);
+  background: var(--color-0);
   box-shadow: 0 0 0 2px #fea;
 }
 
