--- a/bikcraft-final/styles/pages/budget/budget.css
+++ b/bikcraft-final/styles/pages/budget/budget.css
@@ -25,31 +25,157 @@
 
 .budget-product,
 .budget-data {
-    padding: 60px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  padding: 60px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .budget-product {
-    border-radius: 5px 0 0 5px;
-    background: var(--color-12);
+  border-radius: 5px 0 0 5px;
+  background: var(--color-12);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  align-content: start;
 }
 
-.budget-data {
-    border-radius: 0 5px 5px 0;
-    background: var(--color-0);
+.budget-product > * {
+  grid-column: 1/-1;
+}
+
+.budget-product > label {
+  grid-column: initial;
 }
 
 .budget-product label {
-    background: #ccc;
-    padding: 20px;
-    display: inline-block;
+  font: 400 1rem/1.5 "Poppins", sans-serif;
+  color: var(--color-4);
+  background-color: var(--color-10);
+  padding: 12px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  border: 1px solid var(--color-10);
+}
+
+.budget-product input:checked + label {
+  background: var(--color-0);
+  color: var(--color-11);
+}
+
+.budget-product input {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.budget-data {
+  border-radius: 0 5px 5px 0;
+  background: var(--color-0);
+}
+
+.budget-product label::before {
+  content: "";
+  display: inline-block;
+  box-sizing: border-box;
+  width: 12px;
+  height: 12px;
+  border: 1px solid var(--color-6);
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.budget-product input:checked + label::before {
+  border-color: var(--color-7);
+  box-shadow: inset 0 0 0 3px var(--color-0), inset 0 0 0 6px var(--color-7);
+}
+
+.budget-product label:hover {
+  background-color: var(--color-9);
+  border-color: var(--color-9);
+}
+
+.budget-product label:focus {
+  background-color: var(--color-9);
+  box-shadow: 0 0 0 2px var(--color-p1);
+}
+
+.budget-product input:focus + label {
+  box-shadow: 0 0 0 2px var(--color-p1);
+  border: var(--color-12);
+}
+
+.budget-product label span {
+  display: none;
+}
+
+.budget-product input:checked + label span {
+  display: inline-block;
 }
 
 .budget-content {
+  display: none;
+}
+
+.budget-content h2,
+.budget-data h2:nth-of-type(n + 2) {
+  margin-top: 20px;
 }
 
 #bikcraft:checked ~ #budget-bikcraft,
-#insurance:checked ~ #budget-insurance   {
-   display: block;
+#insurance:checked ~ #budget-insurance {
+  display: grid;
+  gap: 20px;
 }
 
+.budget-details {
+  display: none;
+  background-color: var(--color-0);
+  padding: 20px;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 4px;
+  align-items: center;
+}
+
+.budget-details li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.budget-details li img {
+  width: 16px;
+  margin-right: 8px;
+}
+
+.budget-product input:checked + label + .budget-details {
+  display: grid;
+}
+
+@media (max-width: 1200px) {
+  .budget-product,
+  .budget-data {
+    padding: 32px;
+  }
+}
+
+@media (max-width: 800px) {
+  .budget {
+    grid-template-columns: 1fr;
+  }
+
+  .budget-data {
+    border-radius: 0 0 5px 5px;
+  }
+
+  .budget-product {
+    border-radius: 5px 5px 0 0;
+  }
+}
+
+@media (max-width: 400px) {
+  .budget-product {
+    grid-template-columns: 1fr;
+  }
+}
