--- a/bikcraft-final/styles/pages/insurance/questions.css
+++ b/bikcraft-final/styles/pages/insurance/questions.css
@@ -15,15 +15,27 @@
   background-color: var(--color-1);
 }
 
-.questions dt {
+.questions button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
 
-.questions dt::before {
+.questions dd {
+  display: none;
+}
+
+.questions dd.active {
+  display: block;
+}
+
+.questions button::before {
   content: "";
   display: inline-block;
   width: 12px;
@@ -31,7 +43,7 @@
   background-color: var(--color-p1);
 }
 
-.questions dt::after {
+.questions button::after {
   content: "";
   display: inline-block;
   width: 14px;
@@ -40,7 +52,7 @@
   transition: 0.3s;
 }
 
-.questions dt:hover::after {
+.questions button[aria-expanded="true"]::after {
   transform: rotate(180deg);
 }
 
