--- a/bikcraft-final/styles/pages/insurance/questions.css
+++ b/bikcraft-final/styles/pages/insurance/questions.css
@@ -27,11 +27,11 @@
   text-align: left;
 }
 
-.questions dd {
+.js .questions dd {
   display: none;
 }
 
-.questions dd.active {
+.js .questions dd.active {
   display: block;
 }
 
