--- a/flexbox/css/style.css
+++ b/flexbox/css/style.css
@@ -24,10 +24,35 @@ ul {
 
 a {
   text-decoration: none;
-  color: #222222;
 }
 
 img {
   display: block;
   max-width: 100%;
 }
+
+/* Super info */
+.superinfo {
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.superinfo p,
+.superinfo a {
+  margin: 0 10px 10px 10px;
+}
+
+.superinfo-bg {
+  background: #122ab2;
+  color: white;
+}
+
+.superinfo-bg a {
+  color: white;
+}
+
+
