feature: create Qualidade style

--- a/flexbox/css/style.css
+++ b/flexbox/css/style.css
@@ -233,13 +233,12 @@ img {
 
 .preco-item li {
   display: flex;
-  justify-content: space-between;
+  gap: 8px;
   align-items: center;
   margin-bottom: 15px;
-  flex-direction: row-reverse;
 }
 
-.preco-item li::after {
+.preco-item li::before {
   content: "";
   display: block;
   width: 6px;
@@ -274,4 +273,49 @@ img {
   .preco .preco-item:nth-child(2) {
     order: -1;
   }
+}
+
+/* Qaulidade */
+.qualidade {
+  max-width: 960px;
+  margin: 60px auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.qualidade-item {
+  flex: 1 1 300px;
+  margin: 20px 10px;
+}
+
+.qualidade-item h2 {
+  font-size: 2.25em;
+  color: #a4a4a4;
+  margin-bottom: 20px;
+}
+
+.qualidade-item h2::before {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+.qualidade-item:nth-of-type(3n + 1) h2::before {
+  background: #f9265e;
+}
+
+.qualidade-item:nth-of-type(3n + 2) h2::before {
+  background: #ae81ff;
+}
+
+.qualidade-item:nth-of-type(3n + 3) h2::before {
+  background: #66d9eb;
+}
+
+.qualidade-item p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  color: #7c7c7c;
 }
