--- a/flexbox/css/style.css
+++ b/flexbox/css/style.css
@@ -13,7 +13,7 @@ a {
   padding: 0px;
 }
 
-body {
+* {
   font-family: "Nunito", Arial, Helvetica, sans-serif;
   color: #222222;
 }
@@ -260,22 +260,7 @@ img {
   text-align: center;
 }
 
-@media (max-width: 800px) {
-  .preco {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .preco .preco-item:nth-child(3) {
-    order: -2;
-  }
-
-  .preco .preco-item:nth-child(2) {
-    order: -1;
-  }
-}
-
-/* Qaulidade */
+/* Qualidade */
 .qualidade {
   max-width: 960px;
   margin: 60px auto;
@@ -318,4 +303,100 @@ img {
   font-size: 1.25em;
   line-height: 1.4;
   color: #7c7c7c;
+}
+
+/* Newsletter */
+.newsletter {
+  background: #f7f7f7f7;
+  padding: 60px calc((100% - 960px) / 2);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-info {
+  flex: 1 1 240px;
+  margin: 0 10px;
+}
+
+.newsletter-info h1 {
+  font-size: 3em;
+  color: #a4a4a4;
+}
+
+.newsletter-info p {
+  font-size: 1.25em;
+  font-style: italic;
+  max-width: 230px;
+  color: #7c7c7c;
+  margin-bottom: 10px;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  margin: 0 10px;
+  align-self: center;
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 1 260px;
+  font-size: 1.25em;
+
+  color: #7c7c7c;
+  font-style: italic;
+  border: 4px solid #2c70ff;
+  background: transparent;
+  padding: 15px 10px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 260px;
+  font-size: 2.25em;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: #2c70ff;
+  color: white;
+
+  margin: 0px;
+  cursor: pointer;
+  border: 0px;
+  padding: 15px 10px;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  background: #2c70ff;
+  height: 200px;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 1.5em;
+  color: white;
+}
+
+@media (max-width: 800px) {
+  .preco {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .preco .preco-item:nth-child(3) {
+    order: -2;
+  }
+
+  .preco .preco-item:nth-child(2) {
+    order: -1;
+  }
+
+  .newsletter-form button {
+    font-size: 1.5em;
+  }
 }
