--- a/CSS Grid Layout/styles/global.css
+++ b/CSS Grid Layout/styles/global.css
@@ -15,14 +15,12 @@ a {
     text-decoration: none;
 }
 
-img {
-    max-width: 100px;
-}
+
 
 /* Grid Geral */
 .estrutura {
     display: grid;
-    grid-template-columns: minmax(160px 1fr) 3fr 300px;
+    grid-template-columns: minmax(160px, 1fr) 3fr 300px;
     grid-template-areas: 
         "header header header"
         "sidenav content anuncios"
@@ -30,8 +28,43 @@ img {
     ;
 }
 
+/* header */
 .header {
     grid-area: header;
+    background: linear-gradient(135deg, #8844ee, #B07DFB);
+    padding: 30px;
+
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+}
+
+.logo {
+    max-width: 200px;
+}
+
+.header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header nav a {
+    display: block;
+    padding: 10px;
+    color: white;
+    font-size: 1.125em;
+    background: rgba(0, 0, 0, .1);
+    border-radius: 5px;
+    transition: .1s;
+}
+
+.header li + li {
+   margin-left: 30px; 
+}
+
+
+.header nav a:hover {
+    background: rgba(0, 0, 0, .5);
 }
 
 .sidenav {
