feat: footer and advertisements

--- a/CSS Grid Layout/styles/global.css
+++ b/CSS Grid Layout/styles/global.css
@@ -15,7 +15,11 @@ a {
     text-decoration: none;
 }
 
-
+img {
+    display: block;
+    max-width: 100%;
+    border-radius: 5px;
+}
 
 /* Grid Geral */
 .estrutura {
@@ -90,14 +94,30 @@ a {
     background: #B07DFB;
 }
 
+/* content */
 .content {
     grid-area: content;
 }
 
+/* anuncios */
 .anuncios {
     grid-area: anuncios;
+    background: #FAFBFC;
+    display: grid;
+    align-content: start;
+    padding: 30px;
+    grid-gap: 30px;
 }
+
+/* footer */
 
 .footer {
     grid-area: footer;
+   background: linear-gradient(135deg, #8844ee, #B07DFB);
+}
+
+.footer p {
+    color: white;
+    text-align: center;
+    padding: 30px;
 }
