--- a/CSS Grid Layout/styles/global.css
+++ b/CSS Grid Layout/styles/global.css
@@ -97,6 +97,22 @@ img {
 /* content */
 .content {
     grid-area: content;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 30px;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+}
+
+.col-wide {
+    grid-column: 1 / -1;
+}
+
+.imagem-1 {
+    grid-row: span 2;
+    align-self: end;
 }
 
 /* anuncios */
@@ -110,7 +126,6 @@ img {
 }
 
 /* footer */
-
 .footer {
     grid-area: footer;
    background: linear-gradient(135deg, #8844ee, #B07DFB);
