--- a/CSS Grid Layout/styles/global.css
+++ b/CSS Grid Layout/styles/global.css
@@ -1,138 +1,213 @@
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap");
 
-body, p, h1, ul, li, blockquote {
-    padding: 0;
-    margin: 0;
-    font-family: "Vollkorn", Georgia, 'Times New Roman', Times, serif;
+body,
+p,
+h1,
+ul,
+li,
+blockquote {
+  padding: 0;
+  margin: 0;
+  font-family: "Vollkorn", Georgia, "Times New Roman", Times, serif;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    border-radius: 5px;
+  display: block;
+  max-width: 100%;
+  border-radius: 5px;
 }
 
 /* Grid Geral */
 .estrutura {
-    display: grid;
-    grid-template-columns: minmax(160px, 1fr) 3fr 300px;
-    grid-template-areas: 
-        "header header header"
-        "sidenav content anuncios"
-        "footer footer footer"
-    ;
+  display: grid;
+  grid-template-columns: minmax(160px, 1fr) 3fr 300px;
+  grid-template-areas:
+    "header header header"
+    "sidenav content anuncios"
+    "footer footer footer";
 }
 
 /* header */
 .header {
-    grid-area: header;
-    background: linear-gradient(135deg, #8844ee, #B07DFB);
-    padding: 30px;
+  grid-area: header;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+  padding: 30px;
 
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
 }
 
 .logo {
-    max-width: 200px;
+  max-width: 200px;
 }
 
 .header nav ul {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .header nav a {
-    display: block;
-    padding: 10px;
-    color: white;
-    font-size: 1.125em;
-    background: rgba(0, 0, 0, .1);
-    border-radius: 5px;
-    transition: .1s;
+  display: block;
+  padding: 10px;
+  color: white;
+  font-size: 1.125em;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.1s;
 }
 
 .header li + li {
-   margin-left: 30px; 
+  margin-left: 30px;
 }
 
-
 .header nav a:hover {
-    background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 /* sidenav */
 .sidenav {
-    grid-area: sidenav;
-    background-color: #FAFBFC;
-    padding: 30px;
+  grid-area: sidenav;
+  background-color: #fafbfc;
+  padding: 30px;
 }
 
 .sidenav li a {
-    display: block;
-    min-width: 60px;
-    max-width: 100px;
-    margin: 0 auto 30px auto;
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
-    transition: .1s ease-out;
+  display: block;
+  min-width: 60px;
+  max-width: 100px;
+  margin: 0 auto 30px auto;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  transition: 0.1s ease-out;
 }
 
 .sidenav li a:hover {
-    background: #B07DFB;
+  background: #b07dfb;
 }
 
 /* content */
 .content {
-    grid-area: content;
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 30px;
+  grid-area: content;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 30px;
 
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
 }
 
 .col-wide {
-    grid-column: 1 / -1;
+  grid-column: 1 / -1;
 }
 
 .imagem-1 {
-    grid-row: span 2;
-    align-self: end;
+  grid-row: span 2;
+  align-self: end;
+}
+
+.item-2 {
+  align-self: end;
+}
+
+/* estilos content */
+
+p {
+  font-size: 1.2em;
+  line-height: 1.6;
+  letter-spacing: -0.005em;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.informacoes p + p {
+  margin-top: 30px;
+}
+
+/* titulo */
+.titulo {
+  color: #b07dfb;
+}
+
+.titulo h1 {
+  font-size: 3.75em;
+  line-height: 1;
+  font-weight: 700;
+}
+
+.titulo span {
+  font-size: 0.875em;
+  font-style: italic;
+}
+
+/* caracteristicas */
+.caracteristicas {
+  display: flex;
+  align-items: flex-start;
+}
+
+.caracteristicas > div {
+  width: 80px;
+  text-align: center;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  position: relative;
+}
+
+.caracteristicas span {
+    display: block;
+}
+
+.caracteristicas > div:first-child {
+  margin-right: 30px;
+}
+
+.numero {
+  color: #b07dfb;
+  font-size: 3em;
+  line-height: 1;
+  margin-top: 10px auto;
+}
+
+.rotulo {
+  background: white;
+  border-radius: 0 0 5px 5px;
+  color: #b07dfb;
+  padding: 5px 0;
+  position: relative;
+  top: 2px;
 }
 
 /* anuncios */
 .anuncios {
-    grid-area: anuncios;
-    background: #FAFBFC;
-    display: grid;
-    align-content: start;
-    padding: 30px;
-    grid-gap: 30px;
+  grid-area: anuncios;
+  background: #fafbfc;
+  display: grid;
+  align-content: start;
+  padding: 30px;
+  grid-gap: 30px;
 }
 
 /* footer */
 .footer {
-    grid-area: footer;
-   background: linear-gradient(135deg, #8844ee, #B07DFB);
+  grid-area: footer;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
 }
 
 .footer p {
-    color: white;
-    text-align: center;
-    padding: 30px;
+  color: white;
+  text-align: center;
+  padding: 30px;
 }
