--- a/CSS Grid Layout/styles/global.css
+++ b/CSS Grid Layout/styles/global.css
@@ -167,7 +167,7 @@ p {
 }
 
 .caracteristicas span {
-    display: block;
+  display: block;
 }
 
 .caracteristicas > div:first-child {
@@ -192,41 +192,39 @@ p {
 
 /* destaque */
 .destaque {
-    font-size: 0.87em;
-    color: #b07dfb;
-    max-width: 16em;
+  font-size: 0.87em;
+  color: #b07dfb;
+  max-width: 16em;
 }
 
-.citacao, .atributos {
-    align-self: start;
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
-    background: linear-gradient(135deg, #8844ee, #b07dfb);
- 
+.citacao,
+.atributos {
+  align-self: start;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
 }
 
 .citacao p {
-    font-size:  1.5em;
-    font-style: italic;
-    text-align: center;
-    max-width: 500px;
-    margin: 0 auto;
-    color: white;
+  font-size: 1.5em;
+  font-style: italic;
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
+  color: white;
 }
 
 .atributos li {
-    color: white;
-    font-family:  Courier, monospace;
-    font-size: 1.125em;
-    padding: 15px;
+  color: white;
+  font-family: Courier, monospace;
+  font-size: 1.125em;
+  padding: 15px;
 }
 
 .atributos li + li {
-    border-top: 2px solid #b07dfb;
+  border-top: 2px solid #b07dfb;
 }
-
-
 
 /* anuncios */
 .anuncios {
@@ -248,4 +246,86 @@ p {
   color: white;
   text-align: center;
   padding: 30px;
+}
+
+/* responsivo */
+@media (max-width: 1200px) {
+  /* Grid Geral */
+  .estrutura {
+    grid-template-areas:
+      "header header header"
+      "sidenav content content"
+      "sidenav anuncios auncios"
+      "footer footer footer";
+  }
+}
+
+@media (max-width: 760px) {
+  /* Grid Geral */
+  .estrutura {
+    grid-template-columns: 100%;
+    grid-template-areas:
+      "header"
+      "sidenav"
+      "content"
+      "auncios"
+      "footer";
+  }
+
+  .header {
+    grid-template-columns: auto;
+  }
+
+  .logo {
+    margin-bottom: 20px;
+  }
+
+  .header nav a {
+    font-size: 1em;
+  }
+
+  .header li + li {
+    margin-left: 10px;
+  }
+
+  .sidenav {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    position: relative;
+  }
+
+  .sidenav::after {
+    content: '→';
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    color: rgba(0, 0, 0, .3);
+    animation: seta .5s ease-in 0s infinite alternate;
+  }
+
+  .sidenav ul {
+    display: flex;
+  }
+
+  .sidenav li {
+    flex: 1 0 60px;
+  }
+
+  .sidenav {
+    padding: 0 30px;
+  }
+
+  .sidenav li a {
+    margin: 30px 30px 30px 0;
+  }
+}
+
+@keyframes seta {
+  from {
+    right: 30px;
+  }
+  to {
+    right: 20px;
+  }
 }
