--- a/CSS Grid Layout/styles/global.css
+++ b/CSS Grid Layout/styles/global.css
@@ -22,7 +22,7 @@ a {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   border-radius: 5px;
 }
 
@@ -234,6 +234,7 @@ p {
   align-content: start;
   padding: 30px;
   grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 /* footer */
@@ -268,7 +269,7 @@ p {
       "header"
       "sidenav"
       "content"
-      "auncios"
+      "anuncios"
       "footer";
   }
 
@@ -319,6 +320,14 @@ p {
   .sidenav li a {
     margin: 30px 30px 30px 0;
   }
+}
+
+@media (max-width: 600px) {
+  .content {
+    grid-template-columns: auto;
+  }
+
+
 }
 
 @keyframes seta {
