--- a/JavaScript/animaisFantasticos/styles/index.css
+++ b/JavaScript/animaisFantasticos/styles/index.css
@@ -237,6 +237,35 @@ body {
   animation: show 0.5s forwards;
 }
 
+.js .js-accordion dd {
+  display: none;
+}
+
+.js-accordion dt::after {
+  content: "↓";
+  margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after {
+  content: "↑";
+}
+
+.js-accordion dd.ativo {
+  display: block;
+  animation: slideDown 0.5s forwards;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    opacity: 1;
+    max-height: 200px;
+  }
+}
+
 @keyframes show {
   from {
     opacity: 0;
