--- a/JavaScript/animaisFantasticos/styles/styles.css
+++ b/JavaScript/animaisFantasticos/styles/styles.css
@@ -14,15 +14,7 @@ dl {
   padding: 0px;
 }
 
-h1,
-h2,
-h3,
-a,
-p,
-dt,
-label,
-button,
-input {
+* {
   font-family: "IBM Plex Mono", "Times New Roman", Times, serif;
 }
 
