--- a/JavaScript/fantasticAnimals/styles/styles.css
+++ b/JavaScript/fantasticAnimals/styles/styles.css
@@ -188,6 +188,21 @@ body {
   padding: 20px;
 }
 
+[data-week]::after {
+  display: inline-block;
+  content: "";
+  height: 6px;
+  width: 6px;
+  background: #e54;
+  border-radius: 50%;
+  margin-left: 4px;
+  border: 1px solid #000;
+}
+
+[data-week].open::after {
+  background: #3f4;
+}
+
 @media (max-width: 700px) {
   .grid-container {
     grid-template-columns: 1fr;
