--- a/JavaScript/fantasticAnimals/styles/styles.css
+++ b/JavaScript/fantasticAnimals/styles/styles.css
@@ -203,6 +203,13 @@ body {
   background: #3f4;
 }
 
+.btc-price {
+  background-color: #3f4;
+  padding: 0.2rem 0.5rem;
+  font-weight: bold;
+  border-radius: 2px;
+}
+
 @media (max-width: 700px) {
   .grid-container {
     grid-template-columns: 1fr;
