--- a/React/style.css
+++ b/React/style.css
@@ -36,7 +36,6 @@ h3 {
 h1,
 h2,
 h3,
-p,
 ul {
   margin: 1rem 0;
 }
@@ -63,6 +62,11 @@ textarea {
   border-radius: var(--radius);
   background: #eee;
   transition: 0.2s;
+}
+
+p,
+input {
+  margin: 0;
 }
 
 input:focus,
