feat:  0828 Foto Página

--- a/react/ac-dogs/src/components/photoContent/styles.module.css
+++ b/react/ac-dogs/src/components/photoContent/styles.module.css
@@ -68,6 +68,21 @@
   margin-top: 5px;
 }
 
+.single.photo {
+  grid-template-columns: 1fr;
+  height: auto;
+}
+
+.single .img {
+  grid-row: 1;
+  border-radius: 0.2rem;
+  overflow: hidden;
+}
+
+.single .details {
+  padding: 1rem 0px 0px 0px;
+}
+
 @media (max-width: 64rem) {
   .photo {
     height: auto;
