feat: 0836 Biblioteca Externa 2

--- a/react/ac-dogs/src/App.css
+++ b/react/ac-dogs/src/App.css
@@ -96,6 +96,10 @@ input {
   animation: animeLeft 0.3s forwards;
 }
 
+.VictoryContainer {
+  height: initial !important;
+}
+
 @keyframes animeLeft {
   to {
     opacity: 1;
